--- a/part1_PCA_rank.ipynb
+++ b/part1_PCA_rank.ipynb
@@ -8879,7 +8879,7 @@
     }
    ],
    "source": [
-    "final_result_ascent = pd.merge(add_3_inner_ascent, scenarios_4_analyse_PCA_ascent, on='LSOA21CD', how='inner')\n",
+    "final_result_ascent = pd.merge(add_3_inner_ascent, scenarios_4_analyse_PCA_ascent, on='LSOA21CD', how='inner', suffixes=('_x', '_x'))\n",
     "len(final_result_ascent)"
    ]
   },
