--- a/part3_Logic_overlap_part3.ipynb
+++ b/part3_Logic_overlap_part3.ipynb
@@ -3087,7 +3087,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "robust_data_df_export.to_csv('/Users/zhuhong/Library/Mobile Documents/com~apple~CloudDocs/英国/Study/Term 2/Dissertation/data/regression/gen_scenario_overlap.csv', index=False)"
+    "robust_data_df_export.to_csv('data/Output/gen_scenario_overlap.csv', index=False)"
    ]
   },
   {
