--- a/part1_PCA_rank.ipynb
+++ b/part1_PCA_rank.ipynb
@@ -6078,7 +6078,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# status  未改变price\n",
+    "# status  \n",
     "# ascent      638\n",
     "# descent     345\n",
     "# status     4145\n",
