--- a/part2_Kmeans_status_compared_medium_have_nochild.ipynb
+++ b/part2_Kmeans_status_compared_medium_have_nochild.ipynb
@@ -4752,7 +4752,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "borough_data = pd.read_csv(\"/Users/zhuhong/Library/Mobile Documents/com~apple~CloudDocs/英国/Study/Term 2/Dissertation/data/spacial_data/borough_lsoa.csv\")"
+    "borough_data = pd.read_csv(\"data/borough_lsoa.csv\")"
    ]
   },
   {
